# epam-GenAI

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: main.py  research.ipynb
