[project]
name = "newstool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "faiss-cpu>=1.9.0.post1",
    "fastapi[standart]>=0.115.6",
    "httpx==0.27.2",
    "httpx-sse>=0.4.0",
    "huggingface-hub>=0.26.5",
    "langchain>=0.3.11",
    "langchain-community>=0.3.11",
    "langchain-huggingface>=0.1.2",
    "langserve>=0.3.0",
    "lxml>=5.3.0",
    "sentence-transformers>=3.3.1",
    "sse-starlette>=2.1.3",
    "tiktoken>=0.8.0",
]
